﻿# Enter a description of the change. high contrast fix in Memory tools panel

--- a/front_end/profiler/heapProfiler.css
+++ b/front_end/profiler/heapProfiler.css
@@ -214,3 +214,9 @@
 .no-heap-allocation-stack {
     padding: 5px;
 }
+
+@media (forced-colors: active) {
+    .cycled-ancessor-node {
+        opacity: 1;
+    }
+}
